teaching/pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: test2
  namespace: my-namespace
spec:
  containers:
  - image: nginx:1.7.9
    name: test
    ports: 
      - containerPort: 80
