teaching/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: my-nginx
  ports:
  - port: 80
    targetPort: 80
