teaching/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: example-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: web
                port:
                  number: 8080
